[SERVICES] Do not delete running services.

CORE-14260